<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Screenshot Saturday</string>
    
    <string name="avatar_description">Avatar</string>
    <string name="screenshot_description">Screenshot</string>
    <string name="feed_description">Feed</string>
    <string name="loading_text">Loading&#8320;</string>
    <string name="no_network_error">Screenshot Saturday requires an Internet connection. Please check your Network settings and try again.</string>
    <string name="name_placeholder">Brian Kelly</string>
    <string name="username_placeholder">\@spilth</string>
    <string name="text_placeholder">I should charge a little for my app just for having to read all the Twitter, Tumblr and Reddit trademark &amp; licensing documents&#8230;</string>
    <string name="timestamp_placeholder">9:28 AM - 5 Jul 13</string>
    <string name="music_name">spilth</string>
    <string name="music_title">Electric Space Piano</string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_quit">Quit</string>

    <string-array name="settings_screenshot_initial_feed_entries">
        <item>Twitter</item>
        <item>Tumblr</item>
        <item>reddit</item>
    </string-array>
    <string-array name="settings_screenshot_initial_feed_values">
        <item>twitter</item>
        <item>tumblr</item>
        <item>reddit</item>
    </string-array>

    <string-array name="settings_music_tag_entries">
        <item>SoundtrackSunday</item>
        <item>Video Games</item>
        <item>8-bit</item>
        <item>Chiptunes</item>
    </string-array>
    <string-array name="settings_music_tag_values">
        <item>soundtracksunday</item>
        <item>video games</item>
        <item>8-bit</item>
        <item>chiptunes</item>
    </string-array>
    
</resources>
