<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="9dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="9dp"
    android:animateLayoutChanges="false"
    android:orientation="vertical"
    tools:context=".ScreenshotSaturdayActivity" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/screenshot_description" />

    <!--<LinearLayout-->
        <!--android:id="@+id/music_layout"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:animateLayoutChanges="false"-->
        <!--android:background="#aa000000"-->
        <!--android:gravity="top"-->
        <!--android:orientation="horizontal">-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="false"
        android:background="#aa000000"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar_description"
                android:maxHeight="64dp"
                android:maxWidth="64dp"
                android:src="@drawable/avatar" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:includeFontPadding="false"
                    android:text="@string/name_placeholder"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:text="@string/username_placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
            
            <ImageView
                android:id="@+id/feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:adjustViewBounds="true"
                android:contentDescription="@string/feed_description"
                android:maxHeight="64dp"
                android:maxWidth="64dp"
                android:scaleType="fitXY"
                android:src="@drawable/twitter" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_placeholder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:text="@string/timestamp_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/image_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:animateLayoutChanges="false"
        android:visibility="visible" />

</FrameLayout>