<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/music_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:gravity="top"
        android:orientation="horizontal"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/music_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar_description"
            android:maxHeight="64dp"
            android:maxWidth="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/music_avatar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/music_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/music_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ImageView
            android:id="@+id/music_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:adjustViewBounds="true"
            android:contentDescription="@string/feed_description"
            android:maxHeight="64dp"
            android:maxWidth="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/soundcloud" />
    </LinearLayout>
